--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by
-        <a href="https://www.facebook.com" target="_blank">Ojo Daniel</a>.
+        <a href="https://github.com/officialdanielojo" target="_blank">Ojo Daniel</a>.
       </div>
     </section>
 
